add: update password
